# blankcollar-agentic-os

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.caddy.yml  docker-compose.personal.yml  docker-compose.prod.yml  docker-compose.yml  docker-compose.yml.bak
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: ci.yml
apps/auth/: README.md
apps/billing/: README.md
apps/email-ingest/: Dockerfile  README.md  pyproject.toml
apps/email-ingest/app/: __init__.py  config.py  main.py  parser.py  sinks.py
apps/email-ingest/tests/: test_parser.py  test_sinks.py
apps/graphiti/: Dockerfile  pyproject.toml
apps/graphiti/app/: __init__.py  config.py  graph.py  main.py  models.py
apps/graphiti/tests/: test_group_id.py
apps/hermes/: Dockerfile  README.md  pyproject.toml
apps/hermes/app/: __init__.py  brain.py  brand.py  config.py  llm.py  main.py  models.py  runner.py  state.py
apps/hermes/public/: index.html
apps/hermes/tests/: test_brand.py  test_llm_selection.py  test_runner.py
apps/langgraph/: Dockerfile  pyproject.toml
apps/langgraph/app/: __init__.py  adapter_client.py  classifier.py  config.py  dispatcher.py  main.py  models.py  runner.py  state.py
apps/langgraph/tests/: test_classifier.py
apps/openclaw/: Dockerfile  README.md  pyproject.toml
apps/openclaw/app/: __init__.py  brain.py  browser.py  config.py  email.py  fetch.py  google_workspace.py  main.py  models.py  nango.py  runner.py  search.py  state.py
apps/openclaw/public/: index.html
apps/openclaw/tests/: test_brand.py  test_browser.py  test_email.py  test_fetch_safety.py  test_google_workspace.py  test_nango.py  test_search.py
apps/paperclip/: Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
apps/paperclip-real/: Dockerfile  entrypoint.sh
apps/paperclip/public/: index.html
apps/paperclip/src/: audit.ts  auth.ts  bootstrap.ts  briefing.ts  config.ts  db.ts  index.ts  llm.ts  plan.ts  scheduler.ts  schemas.ts  scope.ts  stripe.ts
apps/paperclip/src/autonomy/: resolve.ts
apps/paperclip/src/billing/: checkout.ts  gate.ts  subscription.ts
apps/paperclip/src/connectors/: google.ts  registry.ts  sync.ts  types.ts
apps/paperclip/src/documents/: chunker.ts  fetch.ts
apps/paperclip/src/knowledge/: wiki.ts
apps/paperclip/src/llm/: gateway.ts  log.ts
apps/paperclip/src/mail/: index.ts  templates.ts
apps/paperclip/src/onboarding/: derive.ts  questions.ts
apps/paperclip/src/orgs/: bootstrap.ts
apps/paperclip/src/outcomes/: retrieve.ts  score.ts
apps/paperclip/src/policy/: evaluate.ts
apps/paperclip/src/queue/: adapter-client.ts  channel-replies.ts  fake-agent.ts  registry.ts  worker.ts
apps/paperclip/src/routes/: agents.ts  approvals.ts  audit.ts  autonomy.ts  billing.ts  brain.ts  briefings.ts  captures.ts  channels.ts  connectors.ts  documents.ts  goal-context.ts  goals.ts  health.ts  heartbeat.ts  inbox.ts  invitations.ts  keyresults.ts  knowledge.ts  llm.ts  memory-ingest.ts  memory.ts  onboarding.ts  orgs.ts  outcomes.ts  payments.ts  policies.ts  routines.ts  runs.ts  safeguards.ts  search.ts  self_improvement.ts  skill_drafts.ts  skills.ts  stats.ts  swarms.ts  tools.ts  ui.ts  upstream.ts  webhooks.ts
apps/paperclip/src/routines/: triggers.ts
apps/paperclip/src/runs/: simulate.ts  wrap-up.ts
apps/paperclip/src/safeguards/: parse.ts
apps/paperclip/src/skills/: extract.ts  kr_progress.ts  loader.ts  registry.ts  self_improvement.ts
apps/paperclip/src/swarms/: chief.ts  dispatch.ts
apps/paperclip/src/telegram/: client.ts
apps/paperclip/src/tools/: client.ts  loader.ts  log.ts  registry.ts
apps/paperclip/src/upstream/: pull.ts
apps/paperclip/test/: agents.test.ts  auth.test.ts  autonomy_resolve.test.ts  captures.test.ts  chunker.test.ts  config.test.ts  connectors.test.ts  fetch_external.test.ts  kr_progress.test.ts  llm_gateway.test.ts  onboarding_derive.test.ts  outcomes_score.test.ts  plan.test.ts  safeguards_parse.test.ts  scheduler.test.ts  schemas.test.ts  search.test.ts  simulate.test.ts  skill_extract.test.ts  skills_loader.test.ts  stripe.test.ts  swarm_chief.test.ts  tool_client.test.ts  webhooks.test.ts  wiki.test.ts
apps/website/: .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.ts
apps/website/public/: index.html
apps/website/src/: App.tsx  icons.tsx  main.tsx
apps/website/src/components/: GoalComposer.tsx  GoalKindActions.tsx  InviteAccept.tsx  OnboardingWizard.tsx  RunDrilldown.tsx  States.tsx
apps/website/src/data/: fixtures.ts
apps/website/src/lib/: api.ts  auth.ts  cmdk.tsx  cron.ts  format.ts  tweaks.tsx  useFetch.ts
brand/: blankcollar.md
docs/: AGENTS.md  API.md  ARCHITECTURE.md  BACKUP_RESTORE.md  BRAND.md  COMPANY_BRAIN.md  COMPARISON.md  DEPLOYMENT.md  DESIGN_MD.md  ENVIRONMENT.md  FAQ.md  GLOSSARY.md  GOAL_FIRST.md  GRAPHITI.md  HETZNER_DEPLOY.md  HOSTINGER_DEPLOY.md  INGESTION.md  INTEGRATIONS.md  INTEGRATION_PLAN.md  LANGGRAPH.md  LAUNCH_CHECKLIST.md  LOCAL_SETUP.md  MARKETING.md  NANGO.md  OBSERVABILITY.md  ONBOARDING.md  PAPERCLIP_REAL.md  PLAYWRIGHT.md  QA_CHECKLIST.md  ROADMAP.md  ROLES.md  SCHEMA.md  SKILLS.md  STATUS.md  STRIPE.md  STRIPE_LOCAL.md  SUPABASE_LOCAL.md  TELEGRAM.md  TESTING.md  TOOLS.md  (+2 more)
docs/legal/: PRIVACY.md  TERMS.md
infra/caddy/: Caddyfile
infra/docker/postgres/: init.sql
infra/scripts/: backup.sh  bootstrap.sh  cloud-bootstrap.sh  deploy.sh  doctor.sh  personal-deploy.sh  personal.sh  preflight.sh  reset.sh  restore.sh  setup-keys.sh  setup-stripe.sh  setup-supabase.sh  setup-telegram.sh  smoke.sh  user-add.sh
templates/: README.md
templates/goals/: content-weekly-engine.yaml  finance-monthly-close.yaml  marketing-newsletter-growth.yaml  sales-outbound-leads.yaml  support-inbox-triage.yaml
(+27 files in other folders)
