[project]
name = "email-ingest"
version = "0.1.0"
description = "Blank Collar Agentic OS — IMAP-poll service that turns inbound mail into goals + memories"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.13,<3",
  "pydantic-settings>=2.14,<3",
  "httpx>=0.28,<1",
  "imap-tools>=1.13,<2",
  "structlog>=25,<26",
]

[project.optional-dependencies]
dev = [
  "pytest>=9,<10",
  "ruff>=0.15,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
ignore = ["E501"]
