[project]
name = "graphiti-bc"
version = "0.1.0"
description = "Blank Collar Agentic OS — Graphiti temporal knowledge graph wrapper"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.136,<1",
  "uvicorn[standard]>=0.49,<1",
  "pydantic>=2.13,<3",
  "pydantic-settings>=2.14,<3",
  "graphiti-core>=0.29,<1",
  # graphiti-core requires neo4j>=5.26 with no ceiling. The 6.x driver is
  # allowed and targets Neo4j 5.26+ servers, but is less battle-tested with
  # graphiti — if /add errors against Neo4j, pin this back to <6.
  "neo4j>=5.26,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=9,<10",
  "pytest-asyncio>=1.4,<2",
  "ruff>=0.15,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
ignore = ["E501", "UP042"]
