[project]
name = "hermes"
version = "0.1.0"
description = "Blank Collar Agentic OS — Hermes adapter (general-purpose reasoning agent)"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.136,<1",
  "uvicorn[standard]>=0.49,<1",
  "pydantic>=2.13,<3",
  "pydantic-settings>=2.14,<3",
  "httpx>=0.28,<1",
  "anthropic>=0.109,<1",
  "openai>=2,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=9,<10",
  "pytest-asyncio>=1.4,<2",
  "ruff>=0.15,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
ignore = ["E501", "UP042"]
