[project]
name = "langgraph-bc"
version = "0.1.0"
description = "Blank Collar Agentic OS — LangGraph dispatcher (orchestrates Hermes + OpenClaw)"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.32,<1",
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.6,<3",
  "httpx>=0.27,<1",
  "langgraph>=0.2,<1",
  "langchain-core>=0.3,<1",
  "openai>=1.54,<2",
  "anthropic>=0.39,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "ruff>=0.7,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
ignore = ["E501"]
