[project]
name = "openclaw"
version = "0.1.0"
description = "Blank Collar Agentic OS — OpenClaw adapter (tool/browser-use agent)"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.136,<1",
  "uvicorn[standard]>=0.48,<1",
  "pydantic>=2.13,<3",
  "pydantic-settings>=2.14,<3",
  "httpx>=0.28,<1",
  "selectolax>=0.4.9,<1",
  "aiosmtplib>=5,<6",
  "playwright>=1.60,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=9,<10",
  "pytest-asyncio>=1.3,<2",
  "ruff>=0.15,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
ignore = ["E501"]
